# snake-game

./: Cargo.toml  build.rs  index.html
src/: debug.rs  lib.rs  loading.rs  main.rs  menu.rs  snake.rs
