[package]
name = "snake-game"
version = "0.1.0"
edition = "2021"
exclude = ["dist", "build", "assets"]
build = "build.rs"

[workspace]
# members = ["mobile"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
dev = [
  "bevy/dynamic_linking"
]

[dependencies.bevy]
version = "0.13"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
]

[dependencies]
bevy_kira_audio = "0.19.0"
bevy_asset_loader = "0.20.0"
rand = "0.8.5"
iyes_perf_ui = "0.2.3"
webbrowser ={ version = "0.8.13", features = ["hardened"] }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.29", default-features = false }
image = { version = "0.25", default-features = false }

[build-dependencies]
embed-resource = "2.4.2"
